# traiveler

./: .gitignore  CMakeLists.txt
anim_gen/: gen.py
src/: app.cpp  app.hpp  character.cpp  character.hpp  glgui.hpp  glw.hpp  main.cpp  map.cpp  map.hpp  sound.cpp  sound.hpp
